--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>TTT Dashboard</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2"/>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
