--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body class="bg-slate-900 text-white min-h-screen font-sans">
-<div class="container mx-auto px-4 py-6">
+<div class="container mx-auto px-2 py-6">
     <div class="flex justify-between items-center mb-6">
         <h1 class="text-3xl font-bold">TTT Dashboard</h1>
         <span id="status" class="text-sm text-gray-300">🔄 Lade...</span>
@@ -47,8 +47,8 @@
             <table id="statsTableSession" class="min-w-full bg-slate-800 rounded-xl shadow-md text-left overflow-hidden">
                 <thead>
                 <tr class="text-slate-300">
-                    <th class="p-3 w-12 text-center">Rang</th>
-                    <th class="p-3 w-40">Name</th>
+                    <th class="p-3 w-8 text-center">Rang</th>
+                    <th class="p-3 w-40">Spieler</th>
                     <th class="p-3 w-40"><i data-lucide="swords" class="inline w-4 h-4 mr-2"></i>Kills</th>
                     <th class="p-3 w-40"><i data-lucide="heart-minus" class="inline w-4 h-4 mr-2"></i>Team-Kills</th>
                     <th class="p-3 w-40"><i data-lucide="skull" class="inline w-4 h-4 mr-2"></i>Tode</th>
@@ -75,8 +75,8 @@
             <table id="statsTableAll" class="min-w-full bg-slate-800 rounded-xl shadow-md text-left overflow-hidden">
                 <thead>
                 <tr class="text-slate-300">
-                    <th class="p-3 w-12 text-center">Rang</th>
-                    <th class="p-3 w-40">Name</th>
+                    <th class="p-3 w-8 text-center">Rang</th>
+                    <th class="p-3 w-40">Spieler</th>
                     <th class="p-3 w-40"><i data-lucide="swords" class="inline w-4 h-4 mr-2"></i>Kills</th>
                     <th class="p-3 w-40"><i data-lucide="heart-minus" class="inline w-4 h-4 mr-2"></i>Team-Kills</th>
                     <th class="p-3 w-40"><i data-lucide="skull" class="inline w-4 h-4 mr-2"></i>Tode</th>
