Add stats deletion feature, improve localization, update release notes

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
                     <th class="p-3 w-40"><i data-lucide="user-x" class="inline w-4 h-4 mr-2"></i><span data-i18n="stats.teamDamage">Team Damage</span></th>
                     <th class="p-3 w-40"><i data-lucide="ghost " class="inline w-4 h-4 mr-2"></i><span data-i18n="stats.traitor">Traitor</span></th>
                     <th class="p-3 w-40"><i data-lucide="pie-chart" class="inline w-4 h-4 mr-2"></i><span data-i18n="stats.winrate">Winrate</span></th>
+                    <th class="p-3 w-12"></th>
                 </tr>
                 </thead>
                 <tbody id="statsBodySession"></tbody>
@@ -88,6 +89,7 @@
                     <th class="p-3 w-40"><i data-lucide="user-x" class="inline w-4 h-4 mr-2"></i><span data-i18n="stats.teamDamage">Team Damage</span></th>
                     <th class="p-3 w-40"><i data-lucide="ghost " class="inline w-4 h-4 mr-2"></i><span data-i18n="stats.traitor">Traitor</span></th>
                     <th class="p-3 w-40"><i data-lucide="pie-chart" class="inline w-4 h-4 mr-2"></i><span data-i18n="stats.winrate">Winrate</span></th>
+                    <th class="p-3 w-12"></th>
                 </tr>
                 </thead>
                 <tbody id="statsBodyAll"></tbody>
